apps/spekt8/overlays/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spekt8
spec:
  type: ClusterIP
  selector:
    component: spekt8
  ports:
    - port: 3000
      targetPort: 3000
