apps/spekt8/overlays/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spekt8-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: spekt8.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spekt8
            port:
              number: 3000
